Fixed scrollbar in mobile layout

--- a/style.css
+++ b/style.css
@@ -128,6 +128,10 @@ body{
         overflow: scroll;
         padding-top: 100px;
     }
+    .accordion-wrapper {
+        max-height: 300px;
+        overflow-y: auto;
+    }
     .faq{
         text-align: center;
         margin: 0px auto 20px auto;
